# bluzelle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bluzelle/: CMakeLists.txt
bluzellePoc/: CMakeLists.txt
bluzellePoc/inc/: BZVisualizationPanel.h
bluzellePoc/src/: BZVisualizationPanel.cpp  KeplerFrame.cpp  ThreadManager.cpp  ThreadUtilities.cpp
bluzelled/: CMakeLists.txt
bluzelled/inc/: Node.h  NodeManager.h  Task.h  WebSocket.h
bluzelled/inc/services/: CountNodes.h  GetAllNodes.h  GetMaxNodes.h  GetMinNodes.h  Ping.h  RemoveNodes.h  Service.h  Services.h  SetMaxNodes.h  UpdateNodes.h
bluzelled/inc/web_sockets/: Listener.h  Session.h  WebSocketServer.h
bluzelled/src/: Node.cpp  NodeManager.cpp  NodeUtilities.cpp  WebSocket.cpp  main.cpp  node_test.cpp  test.cpp
bluzelled/src/services/: GetAllNodes.cpp  service_tests.cpp
bluzelled/src/web_sockets/: Session.cpp  WebSocket.cpp
client/: package.json
client/admin/web/: package.json
client/admin/web/src/: test.js  webpack-test.config.js  webpack.config.js
client/admin/web/src/components/App/: App.js
client/admin/web/src/components/DaemonSelector/: DaemonSelector.js
client/bluzelle-client-common/: package.json  webpack-base-config.js  webpack-test.config.js
client/bluzelle-client-common/services/: CommunicationService.js  LogService.js  MessageService.js  NodeService.js
client/crud/test/web-functional/: executeAsyncWithError.js
client/crud/test/web-functional/features/: ConnectToEmulator.specs.js  Hello.specs.js  ReactTest.specs.js
client/crud/web/: package.json
client/crud/web/src/: index.js  test.js  webpack-base-config.js  webpack.config.js
client/crud/web/src/components/: App.js  CommandControls.js  Editor.js  Hello.spec.js  Main.js  QueueEditor.js
client/crud/web/src/services/: CommandQueueService.js  DataService.js  SaveService.js
client/desktop/: ApplicationMenu.js  bluzelle.icns  browser.js  index.html  index.js  main.js  package.json  web
client/emulator/: CommandProcessors.js  CommandService.js  DataStore.js  Emulator.js  Network.js  Node.js  package.json
client/react-functional-test/: package.json  react-webdriver-test-hooks.js  react-webdriver.js
client/react-functional-test/test/: testServer.js
client/react-functional-test/test/features/: basic-tests.js  react-webdriver.js  react-webdriver.specs.js
client/react-functional-test/test/test-app/: .gitignore  index.html  script.js
client/react-functional-test/test/test-app/src/: index.js
client/web/: WebSocketMock.js  package.json
client/web/src/: Utils.js  test.js  testHooks.js  webpack-base-config.js  webpack-test.config.js  webpack.config.js
client/web/src/components/: QAHandle.js
client/web/src/components/App/: App.js  style.css
client/web/src/components/DaemonSelector/: DaemonSelector.js
client/web/src/components/DataGrid/: DataGrid.js  data-grid.css
client/web/src/components/Main/: Header.js  Main.js  MainTabs.js
client/web/src/components/RowSelectDataGrid/: RowSelectDataGrid.js  data-grid.css
client/web/src/components/tabs/: NodeInfo.js
client/web/src/services/: CommunicationService.js  IpcService.js  LogService.js  MessageService.js  NodeService.js  NodeService.specs.js  SettingsService.js  SettingsService.specs.js
daemon/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Node.cpp  confix.txt  main.cpp  test.cpp
daemon/command_line_options/: CommandLineOptions.cpp  CommandLineOptions.h  ParseUtils.cpp  command_line_options_test.cpp
daemon/config/: ConfigParser.cpp  ConfigParser.h  config_tests.cpp
daemon/ethereum/: ethereum_test.cpp
daemon/httpclient/: URL.cpp  URL.h  url_test.cpp
daemon/node/: DaemonInfo.cpp  DaemonInfo.h  DaemonInfo_tests.cpp  Node.cpp  NodeInfo.hpp  NodeInfo_tests.cpp  Singleton.h
daemon/peers/: Peer.cpp  Peer.h  PeerList.cpp  PeerList.h  PeerListener.cpp  PeerServer.cpp  PeerServer.h  PeerSession.cpp  PeerSession.h  peerlist_test.cpp
daemon/raft/: ApiCommandQueue.h  ApiCreateCommand.cpp  ApiReadCommand.cpp  CommandFactory.cpp  CommandFactory.h  JsonTools.cpp  JsonTools.h  Raft.cpp  Raft.h  RaftCandidateState.cpp  RaftCandidateState.h  RaftFollowerState.cpp  RaftFollowerState.h  RaftLeaderState.cpp  RaftLeaderState.h  RaftState.cpp  RaftState.h
daemon/raft/commands/: ApiReadCommand.cpp  ApiUpdateNodeCommand.cpp  ApiUpdateNodeCommand.h  ApiUpdateNodesCommand.cpp  Command.hpp  CommandFactory.cpp  CommandFactory.h  CommandFactory_tests.cpp  PingCommand.cpp  PingCommand.h  RaftCountVotesCommand.cpp  RaftCountVotesCommand.h  RaftHeartbeatCommand.cpp  RaftHeartbeatCommand.h  RaftVoteCommand.cpp  RaftVoteCommand.h  api_update_node_tests.cpp  command_factory_tests.cpp  command_tests.cpp
daemon/resources/: peers
daemon/storage/: Storage.cpp  Storage.h  storage_test.cpp
daemon/websockets/: Session.cpp  WebSocketServer_tests.cpp
dev-ops/ci/build-scripts/: daemon-for-functional-testing.sh
qa/qa-testing/: package.json
qa/qa-testing/test/: test.specs.js
qa/qa-testing/test/web-functional/: CommunicationService.js  base.js  chimp.js  getBaseElement.js
qa/qa-testing/test/web-functional/features/: 000-setup.js  header.specs.js  log.specs.js  node-graph-counting-nodes.js  node-graph.specs.js  node-list.specs.js  settings.specs.js  tab-panel.specs.js
qa/qa-testing/test/websocket-interface/: ws.specs.js
web/: WebSocketMock.js  package.json
web/src/: test.js  webpack-test.config.js  webpack.config.js
web/src/components/: App.specs.js
web/src/components/Main/: Header.js  Main.js
web/src/components/tabs/: LogComponent.js  SettingsTabBody.js
web/src/components/tabs/LogTabBody/: LogTabBody.js
web/src/components/tabs/NodeGraph/: Node.specs.js  NodeGraph.specs.js
web/src/components/tabs/NodeListTabBody/: NodeListTabBody.js  NodeListTabBody.specs.js
web/src/components/tabs/SettingsTabBody/: Row.js  SettingsTabBody.js  SettingsTabBody.specs.js  Table.js
web/src/mocks/: MockCommunicationService.js
web/src/services/: CommunicationService.js  NodeService.js  SettingsService.js  SettingsService.specs.js
(+42 files in other folders)
